Closed
Bug 385806
Opened 19 years ago
Closed 19 years ago
SOAPAction Header on submission is not being set
Categories
(Core Graveyard :: XForms, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: wellsk, Assigned: aaronr)
References
()
Details
(Keywords: fixed1.8.1.5)
Attachments
(2 files)
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; Sidewinder 1.0; formsPlayer 2.0; formsPlayer 1.4; SV1; formsPlayer 1.5; .NET CLR 1.1.4322; .NET CLR 2.0.50727)
Build Identifier:
Reference https://bugzilla.mozilla.org/show_bug.cgi?id=309442. The code to support the SOAPAction header based upon the XForms 1.1 spec. was added to xforms.xpi 0.8.0.1. Using a SOAP monitor and the test case from 309442, the SOAPAction header was not being viewed in the http headers. Discussed the problem with Aaron, who subsequently debugged the problem. He said "we are testing the DOMDocument. We should be checking against the document's documentElement". Please reference the SerializeDataXML method where the nodeNS and nodeName are tested to determine if the node of the instance is in the SOAP Namespace and is the SOAP "Envelope" element.
Reproducible: Always
Steps to Reproduce:
1.See Test case
Component: Extension Compatibility → XForms
Product: Firefox → Core
QA Contact: extension.compatibility → xforms
Version: unspecified → Trunk
Assignee: nobody → aaronr
Status: UNCONFIRMED → NEW
Ever confirmed: true
Simple fix as it turns out. We were incorrectly looking for SOAPEnvelope on the the document instead of the documentElement. Doh!
Attachment #269738 -
Flags: review?(doronr)
Attachment #269738 -
Flags: review?(Olli.Pettay)
Comment 3•19 years ago
|
||
Attachment #269738 -
Flags: review?(Olli.Pettay) → review+
Updated•19 years ago
|
Attachment #269738 -
Flags: review?(doronr) → review+
fix committed to trunk and 1.8 branch
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•