[XForms] SOAPAction header on submission is not being set. Bug 385806, r=doronr+olli